returned the jvm arguments for failsafe