@@ -703,25 +703,6 @@
             </properties>
             <build>
                 <plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>cobertura-maven-plugin</artifactId>
-						<version>2.6</version>
-						<configuration>
-							<format>xml</format>
-							<maxmem>256m</maxmem>
-							<aggregate>true</aggregate>
-						</configuration>
-						<executions>
-							<execution>
-								<id>cobertura-instrument</id>
-								<phase>process-classes</phase>
-								<goals>
-									<goal>instrument</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
 					<!--plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
@@ -784,7 +765,8 @@
                             </execution>
                         </executions>
                         <configuration>
-							<argLine>${failsafeArgLine}</argLine>
+							<!--argLine>${failsafeArgLine}</argLine-->
+							<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
                             <useManifestOnlyJar>false</useManifestOnlyJar>
                             <useSystemClassLoader>true</useSystemClassLoader>
                             <groups>com.nemesis.platform.util.test.IntegrationTest</groups>
